manifests/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: default
spec:
  selector:
   matchLabels:
    app: adminer
  replicas: 1
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
              name: adminerport
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: default
  labels:
    app: adminer
spec:
  selector:
    app: adminer
  ports:
   - port: 8080
     protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: default
  labels:
    app: adminer
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adminer.davafons.com
      secretName: certificate-adminer
  rules:
    - host: adminer.davafons.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080
