manifests/filebroswer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  selector:
   matchLabels:
    app: filebrowser
  replicas: 1
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:latest
          ports:
            - containerPort: 7732
          volumeMounts:
          - mountPath: /.filebrowser.json
            subPath: .filebrowser.json
            name: filebrowser-config-vol
          - mountPath: /srv
            name: filebrowser-brigadasos-shared-pv-vol
          - mountPath: /database
            name: filebrowser-database-pv-vol
      volumes:
        - name: filebrowser-brigadasos-shared-pv-vol
          persistentVolumeClaim:
            claimName: filebrowser-brigadasos-shared-pv-claim
        - name: filebrowser-database-pv-vol
          persistentVolumeClaim:
            claimName: filebrowser-database-pv-claim
        - name: filebrowser-config-vol
          configMap:
            name: filebrowser-config
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
  namespace: filebrowser
  labels:
    app: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
   - port: 7732
     protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ingress
  namespace: filebrowser
  labels:
    app: filebrowser
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-max-body-size: "50G"
    nginx.ingress.kubernetes.io/proxy-body-size: "50G"
    nginx.org/client-max-body-size: "50G"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - filebrowser.brigadasos.xyz
      secretName: certificate-filebrowser
  rules:
    - host: filebrowser.brigadasos.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: filebrowser-service
                port:
                  number: 7732
