manifests/kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: default
  labels:
    app: kibana
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.davafons.com
      secretName: certificate-kibana
  rules:
    - host: kibana.davafons.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
