manifests/mylar3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar3
  namespace: mylar3
spec:
  selector:
   matchLabels:
    app: mylar3
  replicas: 1
  template:
    metadata:
      labels:
        app: mylar3
    spec:
      containers:
        - name: mylar3
          image: lscr.io/linuxserver/mylar3:latest
          ports:
            - containerPort: 8090
          volumeMounts:
          - mountPath: /shared
            name: mylar3-brigadasos-shared-pv-vol
          - mountPath: /config
            name: mylar3-config-pv-vol
      volumes:
        - name: mylar3-brigadasos-shared-pv-vol
          persistentVolumeClaim:
            claimName: mylar3-brigadasos-shared-pv-claim
        - name: mylar3-config-pv-vol
          persistentVolumeClaim:
            claimName: mylar3-config-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mylar3-service
  namespace: mylar3
  labels:
    app: mylar3
spec:
  selector:
    app: mylar3
  ports:
   - port: 8090
     protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mylar3-ingress
  namespace: mylar3
  labels:
    app: mylar3
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mylar3.davafons.com
      secretName: certificate-mylar3
  rules:
    - host: mylar3.davafons.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mylar3-service
                port:
                  number: 8090
