manifests/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: default
spec:
  selector:
   matchLabels:
    app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
              name: pgadminport
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: default
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
   - port: 80
     protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
  labels:
    app: pgadmin
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pgadmin.davafons.com
      secretName: certificate-pgadmin
  rules:
    - host: pgadmin.davafons.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
