manifests/rwol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rwol
  namespace: default
spec:
  selector:
   matchLabels:
    app: rwol
  replicas: 1
  template:
    metadata:
      labels:
        app: rwol
    spec:
      containers:
        - name: rwol
          image: ex0nuss/remote-wake-sleep-on-lan-docker
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rwol-service
  namespace: default
  labels:
    app: rwol
spec:
  selector:
    app: rwol
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rwol-ingress
  namespace: default
  labels:
    app: rwol
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rwol.davafons.com
      secretName: certificate-rwol
  rules:
    - host: rwol.davafons.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rwol-service
                port:
                  number: 8080
