manifests/syncthing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
spec:
  selector:
   matchLabels:
    app: syncthing
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:latest
          ports:
            - name: web-ui
              containerPort: 8384
            - name: syncthing-tcp
              containerPort: 32222
              protocol: TCP
            - name: syncthing-udp
              containerPort: 32222
              protocol: UDP
            - name: syncthing-disc
              containerPort: 31027
              protocol: UDP
          volumeMounts:
            - name: syncthing-config
              mountPath: /config
            - name: syncthing-data
              mountPath: /data
      volumes:
        - name: syncthing-data
          persistentVolumeClaim:
            claimName: local-syncthing-pvc
        - name: syncthing-config
          persistentVolumeClaim:
            claimName: local-syncthing-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service
  labels:
    app: syncthing
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
    - name: web-ui
      port: 8384
    - name: syncthing-tcp
      port: 32222
      protocol: TCP
      nodePort: 32222
    - name: syncthing-udp
      port: 32222
      protocol: UDP
      nodePort: 32222
    - name: syncthing-disc
      port: 31027
      protocol: UDP
      nodePort: 31027
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  labels:
    app: syncthing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - syncthing.davafons.com
      secretName: certificate-syncthing
  rules:
    - host: syncthing.davafons.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: syncthing-service
                port:
                  number: 8384
